Squashed commit of the following:
commit 1acff467e2eba0cee0880fb53f9aae620aa3d5a4
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 18:41:38 2023 +0100

    Fundamentals (WIP)

    Minor editorial fixes

commit 9e6150c1dda88142832f27d877755196e4b7c592
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 16:41:59 2023 +0100

    Update nav.adoc according to the Overview

commit f96a967753e6c71b5b98cac192511a0bcede9e75
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 15:32:19 2023 +0100

    Refactoring Managing TypeDB section

commit 0a77a3fca948926c84eb13dee17675c384f08d41
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 13:08:32 2023 +0100

    Quickstart guide examples update

commit 21523f79f8cda099270cf3469a2927b4c1cc3be1
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Mon Sep 11 19:36:36 2023 +0100

    Quickstart (WIP)

commit df4574d069a84153087960896d7b83ad3a2aa352
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Mon Sep 11 11:05:19 2023 +0100

    Fixing build errors

commit ba8d8f3f8bdc9afedb4526077cf48c21428cae82
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Fri Sep 8 20:09:44 2023 +0100

    Quickstart guide (WIP)

commit 1c099ee0e9293d609c09212c988b2eaf6df9d33d
Merge: 0ccda14 21c5140
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Fri Sep 8 15:47:27 2023 +0100

    Merge branch 'development' into typedb-omni-docs

commit 21c514038a0b4ee421750e2d7a319aab52ef7820
Author: Vladimir Izmalkov <48120135+izmalk@users.noreply.github.com>
Date:   Fri Sep 8 15:41:59 2023 +0100

    Fix the windows and mac start instructions (#718)

    ## What is the goal of this PR?

    Fix the start instructions on the installation page.

    ## What are the changes implemented in this PR?

    Windows: Include the error text and fix the broken link.
    macOS: Remove a redundant phrase.

commit 0ccda148948839e321171c028e58457e76cc5665
Author: Vladimir Izmalkov <vladimir@

--- a/clients-src/modules/ROOT/pages/console.adoc
+++ b/clients-src/modules/ROOT/pages/console.adoc
@@ -141,6 +141,7 @@ terminal (e.g: `chcp 936` for Chinese text).
 
 Most systems also allow us to set the system-wide locale, however this impacts the appearance of other applications.
 
+[#_non_interactive_mode]
 == Non-interactive mode
 
 We can provide several command-line arguments when running Console in the terminal.
@@ -359,7 +360,8 @@ transaction typedb data read --infer true
 
 == Examples
 
-=== Interactive mode
+[#_interactive_mode_examples]
+=== Interactive mode examples
 
 The following example illustrates how to create a database, define a schema, and insert some data into TypeDB.
 
@@ -371,7 +373,7 @@ double kbd:[Enter] (or kbd:[Enter] on an empty line) to send a query.
 
 [NOTE]
 ====
-The following code block shows terminal input and output at the same time. To be able to easily recognize inputs,
+The following code block shows terminal input and output at the same time.To be able to easily recognize inputs,
 they have one of the following prompts at the beginning of the line:
 
 - `$` -- for bash input
@@ -415,7 +417,7 @@ Transaction changes committed
 The above example creates a database with name `typedb`, lists all databases on the server, defines a schema for the
 database created earlier, then inserts an instance of `person` type into the database.
 
-=== Non-interactive mode
+=== Non-interactive mode examples
 
 ==== Command line arguments example
 
@@ -514,7 +516,7 @@ Database 'test' deleted
 
 | 2.18.0
 | 1
-| 2.18.0 to 2.21.1
+| 2.18.0 to 2.22.0
 | 2.18.0 to 2.21.1
 
 | 2.17.0
