--- a/typedb-src/modules/ROOT/pages/fundamentals/inference.adoc
+++ b/typedb-src/modules/ROOT/pages/fundamentals/inference.adoc
@@ -5,7 +5,7 @@
 :pageTitle: Inference
 
 [#_inference]
-TypeDB is capable of reasoning over data via rules xref:development/schema.adoc#_define_rules[defined] in the schema.
+TypeDB is capable of reasoning over data via rules xref:development/define-schema.adoc#_define_rules[defined] in the schema.
 
 The reasoning engine uses <<_rules,rules>> as a set of logic to infer new data, based on the existence of patterns in
 data of a TypeDB database.
@@ -44,8 +44,8 @@ include::typeql::fundamentals.adoc[tag=rules_basics]
 
 include::typeql::fundamentals.adoc[tag=recursive_logic]
 
-Read more on how to create rules in a schema in the xref:typedb::development/schema.adoc#_define_rules[Define rules]
-section of the xref:typedb::development/schema.adoc[] page.
+Read more on how to create rules in a schema in the xref:typedb::development/define-schema.adoc#_define_rules[Define rules]
+section of the xref:typedb::development/define-schema.adoc[] page.
 
 We can use xref:typedb::fundamentals/patterns.adoc#_computation[computation] operations and functions in the condition pattern.
 And we can use value variables in the conclusion of a rule.
@@ -61,10 +61,10 @@ This was the last page of the *Fundamentals* section.
 
 We recommend to continue exploring TypeDB by going through the *Development* section:
 
-* xref:fundamentals.adoc[]
-* xref:development/schema.adoc[]
-* xref:development/write.adoc[]
-* xref:development/read.adoc[]
+* xref:development/connect.adoc[]
+* xref:development/define-schema.adoc[]
+* xref:development/write-data.adoc[]
+* xref:development/read-data.adoc[]
 * xref:development/infer.adoc[]
 * xref:development/response.adoc[]
 * xref:development/api.adoc[]
