--- a/clients-src/modules/ROOT/pages/java/java-tutorial.adoc
+++ b/clients-src/modules/ROOT/pages/java/java-tutorial.adoc
@@ -19,15 +19,17 @@ Import the following modules:
 
 == Connecting
 
-Instantiate a TypeDB Core client and open a xref:typedb:ROOT:fundamentals.adoc#_sessions[session] to a
-xref:typedb:ROOT:fundamentals.adoc#_databases[database].
+Instantiate a TypeDB Core client and open a xref:typedb:ROOT:development/connect.adoc#_sessions[session] to a
+xref:typedb:ROOT:development/connect.adoc#_databases[database].
 
 [NOTE]
 ====
 Find out how to create a database in TypeDB on the
-xref:typedb:ROOT:quickstart/studio.adoc#_create_a_database[Quickstart guide] page.
+xref:typedb:ROOT:quickstart-guide.adoc#_create_a_database[Quickstart guide] page.
 
-The name for the database should be `social_network`.
+The name for the database should be `social_network`. +
+The database should have the following schema loaded: xref:attachment$schema.tql[schema.tql]. +
+The database should have the following data inserted: xref:attachment$data.tql[data.tql].
 ====
 
 // test-example TypeDBQuickstartA.java
@@ -156,8 +158,8 @@ Check out the xref:java/java-api-ref.adoc#_response_section[Response] section of
 available methods on the concepts retrieved as the answers to queries.
 
 To view examples of various TypeQL queries, head over to
-xref:typedb::development/write.adoc[Writing data] and
-xref:typedb::development/read.adoc[Reading data] pages.
+xref:typedb::development/write-data.adoc[Writing data] and
+xref:typedb::development/read-data.adoc[Reading data] pages.
 
 For some more Java Driver examples -- see the
 xref:typedb:ROOT:tutorials/sample-app.adoc#_java_implementation[Java implementation] on the Sample application page.
