--- a/clients-src/modules/ROOT/pages/node-js/node-js-tutorial.adoc
+++ b/clients-src/modules/ROOT/pages/node-js/node-js-tutorial.adoc
@@ -22,15 +22,17 @@ const { TypeDB } = require("typedb-client");
 
 == Connecting
 
-Instantiate a TypeDB Core client and open a xref:typedb:ROOT:fundamentals.adoc#_sessions[session] to a
-xref:typedb:ROOT:fundamentals.adoc#_databases[database].
+Instantiate a TypeDB Core client and open a xref:typedb:ROOT:development/connect.adoc#_sessions[session] to a
+xref:typedb:ROOT:development/connect.adoc#_databases[database].
 
 [NOTE]
 ====
 Find out how to create a database in TypeDB on the
-xref:typedb:ROOT:quickstart/studio.adoc#_create_a_database[Quickstart guide] page.
+xref:typedb:ROOT:quickstart-guide.adoc#_create_a_database[Quickstart guide] page.
 
-The name for the database should be `social_network`.
+The name for the database should be `social_network`. +
+The database should have the following schema loaded: xref:attachment$schema.tql[schema.tql]. +
+The database should have the following data inserted: xref:attachment$data.tql[data.tql].
 ====
 
 Instantiate a client and open a session.
@@ -147,10 +149,10 @@ Check out the xref:node-js/node-js-api-ref.adoc[API Reference] to learn about th
 To view examples of running various queries using TypeQL, head over to their dedicated documentation pages
 as listed below:
 
-* xref:typedb::development/write.adoc#_insert[Insert]
-* xref:typedb::development/write.adoc#_delete_query[Delete]
-* xref:typedb::development/write.adoc#_update_query[Update]
-* xref:typedb::development/read.adoc#_get[Get]
+* xref:typedb::development/write-data.adoc#_insert[Insert]
+* xref:typedb::development/write-data.adoc#_delete_query[Delete]
+* xref:typedb::development/write-data.adoc#_update_query[Update]
+* xref:typedb::development/read-data.adoc#_get[Get]
 //#todo update to TypeQL full examples
 
 == Where to go next
@@ -159,8 +161,8 @@ Check out the xref:node-js/node-js-api-ref.adoc#_response_section[Response] sect
 about the available methods on the concepts retrieved as the answers to queries.
 
 To view examples of various TypeQL queries, head over to
-xref:typedb::development/write.adoc[Writing data] and
-xref:typedb::development/read.adoc[Reading data] pages.
+xref:typedb::development/write-data.adoc[Writing data] and
+xref:typedb::development/read-data.adoc[Reading data] pages.
 
 For some more Python Driver examples -- see the
 xref:typedb:ROOT:tutorials/sample-app.adoc#_node_js_implementation[Python implementation] on the Sample application
