--- a/clients-src/modules/ROOT/pages/python/python-tutorial.adoc
+++ b/clients-src/modules/ROOT/pages/python/python-tutorial.adoc
@@ -22,15 +22,17 @@ from typedb.client import *
 
 == Connecting
 
-Instantiate a TypeDB Core client and open a xref:typedb:ROOT:fundamentals.adoc#_sessions[session] to a
-xref:typedb:ROOT:fundamentals.adoc#_databases[database].
+Instantiate a TypeDB Core client and open a xref:typedb:ROOT:development/connect.adoc#_sessions[session] to a
+xref:typedb:ROOT:development/connect.adoc#_databases[database].
 
 [NOTE]
 ====
 Find out how to create a database in TypeDB on the
-xref:typedb:ROOT:quickstart/studio.adoc#_create_a_database[Quickstart guide] page.
+xref:typedb:ROOT:quickstart-guide.adoc#_create_a_database[Quickstart guide] page.
 
-The name for the database should be `social_network`.
+The name for the database should be `social_network`. +
+The database should have the following schema loaded: xref:attachment$schema.tql[schema.tql]. +
+The database should have the following data inserted: xref:attachment$data.tql[data.tql].
 ====
 
 [,python]
@@ -124,8 +126,8 @@ Check out the xref:python/python-api-ref.adoc#_response_section[Response] sectio
 about the available methods on the concepts retrieved as the answers to queries.
 
 To view examples of various TypeQL queries, head over to
-xref:typedb::development/write.adoc[Writing data] and
-xref:typedb::development/read.adoc[Reading data] pages.
+xref:typedb::development/write-data.adoc[Writing data] and
+xref:typedb::development/read-data.adoc[Reading data] pages.
 
 For some more Python Driver examples -- see the
 xref:typedb:ROOT:tutorials/sample-app.adoc#_python_implementation[Python implementation] on the Sample application
