--- a/typedb-src/modules/ROOT/nav.adoc
+++ b/typedb-src/modules/ROOT/nav.adoc
@@ -2,33 +2,29 @@
 
 * xref:overview.adoc[]
 * xref:introduction.adoc[]
+* xref:install-and-run.adoc[]
+* xref:quickstart-guide.adoc[]
+* xref:fundamentals.adoc[]
 
-* Install & Run
-** xref:install-and-run/install.adoc[]
-** xref:install-and-run/deploy-in-cloud.adoc[]
-
-* Quickstart guides
-** xref:quickstart/studio.adoc[]
-** xref:quickstart/console.adoc[]
-** xref:quickstart/drivers.adoc[]
-
-//#todo update from TypeQL to TypeDB fundamentals
-* Fundamentals
-** xref:typedb::fundamentals/connect.adoc[]
-** xref:fundamentals/types.adoc[]
-** xref:fundamentals/queries.adoc[]
-** xref:fundamentals/patterns.adoc[]
-** xref:fundamentals/inference.adoc[]
-
-* Development
-** xref:development/schema.adoc[]
-** xref:development/write.adoc[]
-** xref:development/read.adoc[]
+* Developing with TypeDB
+** xref:development/connect.adoc[]
+** xref:development/define-schema.adoc[]
+** xref:development/write-data.adoc[Insert data]
+** xref:development/write-data.adoc[Delete data]
+** xref:development/write-data.adoc[Update data]
+** xref:development/read-data.adoc[]
 ** xref:development/infer.adoc[]
-** xref:development/response.adoc[]
 ** xref:development/best.adoc[]
-//** xref:development/api.adoc[]
 
+* Managing TypeDB
+* xref:managing-typedb/configuration.adoc[]
+* xref:managing-typedb/user-management.adoc[]
+* xref:managing-typedb/version-update.adoc[]
+* xref:managing-typedb/export-import.adoc[]
+* xref:managing-typedb/high-availability.adoc[]
+* xref:managing-typedb/security.adoc[]
+
+////
 * Cloud deployments
 ** xref:cloud-deployments/account.adoc[]
 ** xref:cloud-deployments/connect.adoc[]
@@ -39,9 +35,10 @@
 * Self-hosted deployments
 ** xref:self-hosted-deployments/configuration.adoc[]
 ** xref:self-hosted-deployments/export-import.adoc[]
-** xref:self-hosted-deployments/update.adoc[]
-** xref:self-hosted-deployments/ha.adoc[]
+** xref:self-hosted-deployments/version-update.adoc[]
+** xref:self-hosted-deployments/high-availability.adoc[]
 ** xref:self-hosted-deployments/security.adoc[]
+////
 
 * Tutorials
 ** xref:tutorials/iam-schema.adoc[]
