--- a/typedb-src/modules/ROOT/pages/development/write-data.adoc
+++ b/typedb-src/modules/ROOT/pages/development/write-data.adoc
@@ -10,12 +10,12 @@ There are multiple query types that can modify data in a TypeDB database:
 * <<_delete_query>>
 * <<_update_query,Update>> (or match-delete-insert) query
 
-To send a writing data query we need to use xref:fundamentals.adoc#_transactions[Write transaction].
+To send a writing data query we need to use xref:development/connect.adoc#_transactions[Write transaction].
 
 [IMPORTANT]
 ====
 All examples provided on this page are designed for the IAM database schema and data.
-To set the IAM database follow the xref:quickstart/studio.adoc[].
+To set the IAM database follow the xref:quickstart-guide.adoc[].
 ====
 
 [#_insert]
@@ -235,7 +235,7 @@ exist, but no longer play a role in the matched `permission` relations.
 
 == Learn more
 
-After we write some data into the database, we can try to xref:typedb::development/read.adoc[read] it.
+After we write some data into the database, we can try to xref:typedb::development/read-data.adoc[read] it.
 
 In case there is no dataset ready yet for insertion, see the
 xref:attachment$iam-schema.tql[IAM sample dataset,window=_blank] for examples.
