--- a/typedb-src/modules/ROOT/pages/fundamentals/connect.adoc
+++ b/typedb-src/modules/ROOT/pages/fundamentals/connect.adoc
@@ -1,4 +1,4 @@
-= Connecting to TypeDB
+= Connect
 :keywords: typedb, basics, connect, connection, session, database
 :longTailKeywords: basic concepts of typedb, typedb connection, typedb database, typedb session
 :pageTitle: Connecting
@@ -86,8 +86,8 @@ due to the older server lacking the API to check the protocol version.
 [#_databases]
 == Databases
 
-TypeDB instances can contain multiple databases. A database consists of a xref:development/schema.adoc[schema] and
-xref:development/write.adoc[data]. It is both separate and independent of any other database: two databases can't influence
+TypeDB instances can contain multiple databases. A database consists of a xref:development/define-schema.adoc[schema] and
+xref:development/write-data.adoc[data]. It is both separate and independent of any other database: two databases can't influence
 each other. However, TypeDB Clients can connect to multiple databases simultaneously.
 
 [NOTE]
@@ -192,7 +192,8 @@ There are two types of sessions:
 [WARNING]
 ====
 Only one *Schema* session can be open at any time. And any open *Schema* session blocks all attempts to open a
-*Data Write* transaction. For more information on these limits see the <<_schema_integrity>> section.
+*Data Write* transaction.
+For more information on these limits, see the xref:development/acid-guarantees.adoc#_schema_integrity[] section.
 ====
 
 [cols="^,^,^,^,^",options="header"]
@@ -289,7 +290,7 @@ A good principle to follow is for logically coherent transactions to be grouped 
 == Transactions
 
 All queries to a TypeDB database are performed through transactions. TypeDB transactions provide full
-<<_acid_guarantees,ACID guarantees>> up to <<_isolation,snapshot isolation>>.
+xref:development/acid-guarantees.adoc[] up to xref:development/acid-guarantees.adoc#_isolation[snapshot isolation].
 
 There are two types of transactions:
 
@@ -373,7 +374,7 @@ For more information on how to do it with different Clients see the documentatio
 ** xref:clients:ROOT:node-js/node-js-api-ref.adoc#_create_transaction[Node.js].
 
 TypeDB transactions use snapshot isolation and optimistic concurrency control to support concurrent, lock-free
-read/write transactions. For more information, see the <<_acid_guarantees>> section below.
+read/write transactions. For more information, see the xref:development/acid-guarantees.adoc[] page.
 
 === Transaction time limit
 
@@ -393,89 +394,10 @@ caused by transactions that will not be completed and terminate unresponsive tra
 
 For more advice and *best practices* visit the xref:development/best.adoc[Best practices] page.
 
-[#_acid_guarantees]
-== ACID guarantees
-
-All TypeDB transactions have ACID guarantees.
-
-* <<_atomicity>>
-* <<_consistency>>
-* <<_isolation>>
-* <<_durability>>
-
-Schema operations have additional concurrency restrictions to guarantee schema integrity.
-See the <<_schema_integrity>> section.
-
-[#_atomicity]
-=== Atomicity
-
-TypeDB transactions are all or nothing. If a commit succeeds, all of its changes are persisted. If it fails, all of its
-changes will be rolled back.
-
-[#_consistency]
-=== Consistency
-
-TypeDB validates all changes to data and schemas. If changes to a database violate schema or data constraints, the
-transaction will fail and be rolled back.
-
-[#_isolation]
-=== Isolation
-
-TypeDB transactions use snapshot isolation and optimistic concurrency control to support simultaneous, lock-free
-read/write transactions. Thus, a transaction operates on its snapshot of the data, independent of any other. All
-of its changes are hidden from other transactions. However, they will become visible immediately after a successful
-commit.
-
-If two transactions attempt to modify the same data, one will succeed on commit while the other will fail. However,
-one transaction can read data while another is writing it.
-
-[#_durability]
-=== Durability
-
-TypeDB writes transactions to a write-ahead log upon commit, ensuring they can be recovered if an unexpected failure
-(e.g., power outage) occurs before the data is modified.
-
-[NOTE]
-====
-TypeDB durability guarantees do not apply when storage devices become corrupt or damaged.
-====
-
-Successful write transactions are written to the write-ahead log before returning a response to the client. If a
-transaction is not successful, all changes are rolled back.
-
-For TypeDB Enterprise and TypeDB Cloud installations, transaction acknowledgment is sent to the client after a majority
-of replicas replicated the transaction results. See xref:self-hosted-deployments/ha.adoc#_replication[Replication] for details.
-
-[#_schema_integrity]
-=== Schema integrity enforcement
-
-* Only one *Schema* session can be opened.
-
-* Only one *Write* transaction in a *Schema* session can be opened.
-
-* Opening a *Schema* session prevents any *Data Write* transactions.
-
-* Any *Write* transaction opened in a *Data* session prevents us from opening a *Schema* session.
-
-[NOTE]
-====
-If anything prevents us from opening a session TypeDB will wait for a timeout of about *10 seconds* and, if the problem
-persists, throw an error:
-
-----
-[SSN03] Invalid Session Operation: Could not acquire lock for schema session. Another schema session may have been left open.
-----
-====
-
-Hence, we can always:
-
-* open *Data* session,
-* open a *Read* transaction in an existing session of any type.
-
 == Learn more
 
 With the essential knowledge of the *Fundamentals* section and the ability to connect to a TypeDB databases, described
-on this page, let's try defining our own xref:development/schema.adoc[schema].
+on this page, let's try defining our own xref:development/define-schema.adoc[schema].
 
-After that we can try xref:development/write.adoc[writing] and xref:development/read.adoc[reading] data from
+After that we can try xref:development/write-data.adoc[writing] and xref:development/read-data.adoc[reading] data from
 a database.
