--- a/typedb-src/modules/ROOT/pages/install-and-run/enterprise/install-and-run.adoc
+++ b/typedb-src/modules/ROOT/pages/install-and-run/enterprise/install-and-run.adoc
@@ -1,21 +1,21 @@
 = TypeDB Enterprise install and run
 :keywords: setup, getting started, typedb, download, install, server, linux, mac, windows, docker
-:longTailKeywords: typedb cluster on linux, typedb cluster on mac, typedb cluster on windows, start typedb cluster, run typedb cluster
-:pageTitle: Install and Run TypeDB Cluster
-:summary: Install and run the TypeDB Cluster on Linux, Mac or Windows.
+:longTailKeywords: typedb enterprise on linux, typedb enterprise on mac, typedb enterprise on windows, start typedb enterprise, run typedb enterprise
+:pageTitle: Install and Run TypeDB Enterprise
+:summary: Install and run the TypeDB Enterprise on Linux, Mac or Windows.
 
 == Obtaining Commercial License
 
-TypeDB Cluster is a commercial offering that provides a production-grade experience - high-availability, scalability,
+TypeDB Enterprise is a commercial offering that provides a production-grade experience - high-availability, scalability,
 and security. A license can be obtained from our link:mailto:commercial@vaticle.com[sales team].
 
 == System Requirements
 
-TypeDB Cluster runs on macOS, Linux and Windows. The only requirement is Java (version 11 or higher) which can be
+TypeDB Enterprise runs on macOS, Linux and Windows. The only requirement is Java (version 11 or higher) which can be
 downloaded from http://openjdk.java.net/install/[OpenJDK] or
 https://www.oracle.com/java/technologies/javase-jdk15-downloads.html[Oracle Java].
 
-== Download and Install TypeDB Cluster
+== Download and Install TypeDB Enterprise
 
 [tabs]
 ====
@@ -29,11 +29,11 @@ location on your machine that is easily accessible via terminal.
 
 *Other package managers*
 
-If TypeDB Cluster doesn't have a distribution you need, please open an issue
+If TypeDB Enterprise doesn't have a distribution you need, please open an issue
 https://github.com/vaticle/typedb/issues[on GitHub].
 
 Having downloaded TypeDB, we can now <<_starting_and_stopping_a_multi_node_cluster,start>> the Cluster and
-interact with xref:clients::console.adoc[].
+interact with xref:clients:ROOT:console.adoc[].
 --
 
 macOS::
@@ -45,7 +45,7 @@ Download the https://repo.vaticle.com/#browse/browse:private-artifact[latest rel
 location on your machine that is easily accessible via a terminal.
 
 Having downloaded TypeDB, we can now <<_starting_and_stopping_a_multi_node_cluster,start>> the Cluster and
-interact with xref:clients::console.adoc[].
+interact with xref:clients:ROOT:console.adoc[].
 --
 
 Windows::
@@ -57,7 +57,7 @@ Download the https://repo.vaticle.com/#browse/browse:private-artifact[latest rel
 location on your machine that is easily accessible via a command prompt.
 
 Having downloaded TypeDB, we can now <<_starting_and_stopping_a_multi_node_cluster,start>> the Cluster and
-interact with xref:clients::console.adoc[].
+interact with xref:clients:ROOT:console.adoc[].
 --
 
 Docker::
@@ -91,8 +91,8 @@ To ensure that data is preserved even when the instance is killed or restarted, 
 docker run --name typedb -d -v $(pwd)/db/:/opt/typedb-cluster-all-linux/server/db/ -p 1729:1729 vaticle/typedb-cluster:latest
 ----
 
-Having started the instance, the TypeDB Cluster is expected to be running on port `1729` on your machine.
-To interact with xref:clients::console.adoc[], run:
+Having started the instance, the TypeDB Enterprise is expected to be running on port `1729` on your machine.
+To interact with xref:clients:ROOT:console.adoc[], run:
 
 [,bash]
 ----
@@ -105,21 +105,21 @@ docker exec -ti typedb bash -c '/opt/typedb-cluster-all-linux/typedb console'
 
 === Starting
 
-If you have installed TypeDB using a package manager, to start the TypeDB Cluster, open a terminal and run
+If you have installed TypeDB using a package manager, to start the TypeDB Enterprise, open a terminal and run
 `typedb cluster`.
 
 Otherwise, if you have manually downloaded TypeDB, `cd` into the unzipped folder and run `./typedb cluster`.
 
 === Stopping
 
-To stop the TypeDB Cluster, press Ctrl+C in the terminal session you are running TypeDB Cluster from.
+To stop the TypeDB Enterprise, press Ctrl+C in the terminal session you are running TypeDB Enterprise from.
 
 [#_starting_and_stopping_a_multi_node_cluster]
 == Starting and Stopping a multi-node Cluster
 
 === Starting
 
-While it's possible to run TypeDB Cluster in a single-node mode, a truly highly-available and fault-tolerant
+While it's possible to run TypeDB Enterprise in a single-node mode, a truly highly-available and fault-tolerant
 production-grade setup includes setting up multiple servers to connect and form a cluster. At any given point in time,
 one of those servers acts as a leader and the others are followers. Increasing the number of nodes increases the
 Cluster's tolerance to failure: to tolerate N nodes failing, Cluster needs to consist of `2N + 1` nodes.
@@ -137,7 +137,7 @@ If you're using a single machine to host all nodes, you can prefix the port with
 ports `1729`, `1730`, `1731` would turn into `11729`, `11730`, `11731`; `21729`, `21730`, `21731` and so on.
 ====
 
-This is how 3-node TypeDB Cluster would be started on three separate machines.
+This is how 3-node TypeDB Enterprise would be started on three separate machines.
 
 [,bash]
 ----
@@ -189,9 +189,9 @@ $ ./typedb cluster \
 
 [NOTE]
 ====
-This guide assumes the application accessing TypeDB Cluster resides on the same private network.
+This guide assumes the application accessing TypeDB Enterprise resides on the same private network.
 
-If this is *not* the case, TypeDB Cluster also supports using different IP addresses for client and server communication.
+If this is *not* the case, TypeDB Enterprise also supports using different IP addresses for client and server communication.
 In order to do so, the relevant external hostname should be passed as arguments using the `--server.address` and
 `--server.peers` flags as below.
 
@@ -214,18 +214,19 @@ bash $ ./typedb cluster \
 and so on.
 
 In this case, port `1729` would need to be open to public and clients would use the `external-host-1`, `external-host-2`
-and `external-host-3` hostnames to communicate with TypeDB Cluster; inter-server communication would be done over a
+and `external-host-3` hostnames to communicate with TypeDB Enterprise; inter-server communication would be done over a
 private network using ports `1730` and `1731`.
 ====
 
 === Stopping
 
-Stopping TypeDB Cluster is done the same way as on a single node: pressing Ctrl+C in the terminal that was used to
+Stopping TypeDB Enterprise is done the same way as on a single node: pressing Ctrl+C in the terminal that was used to
 start it.
 All nodes must be shut down independently in the same way.
 
 == Summary
 
-So far we have learned how to download, install and run TypeDB Cluster in an ad-hoc way.
+So far we have learned how to download, install and run TypeDB Enterprise in an ad-hoc way.
 
-Next, we'll learn how to deploy TypeDB Cluster using Kubernetes and Helm.
+Next, we'll learn how to deploy TypeDB Enterprise using
+xref:typedb::install-and-run/enterprise/kubernetes.adoc[Kubernetes] and Helm.
