--- a/typedb-src/modules/ROOT/pages/managing-typedb/cloud-deployments/deploy.adoc
+++ b/typedb-src/modules/ROOT/pages/managing-typedb/cloud-deployments/deploy.adoc
@@ -7,7 +7,7 @@
 
 A TypeDB Cloud deployment is a TypeDB Enterprise cluster that TypeDB Cloud manages.
 
-image::typedb::cloud.png[TypeDB Cloud web interface,width = 90%, link=self]
+image::cloud.png[TypeDB Cloud web interface,width = 90%, link=self]
 
 A deployment can be created and destroyed in the TypeDB Cloud. While it exists, it can be suspended and resumed.
 
@@ -29,7 +29,7 @@ in a cloud environment.
 // tag::create[]
 To create a new deployment, use the following steps:
 
-1. xref:cloud::user-management/organization.adoc#_select[Select] an Organization to create a deployment in.
+1. xref:cloud:ROOT:user-management/organization.adoc#_select[Select] an Organization to create a deployment in.
 2. Open the Deployments page from the navigation menu on the left.
 3. Click the btn:[Create] button in the top toolbar.
 4. Use the *Create new deployment* form to provide the required information:
@@ -46,7 +46,7 @@ To create a new deployment, use the following steps:
 
 To open a Deployment Details page:
 
-1. xref:cloud::user-management/organization.adoc#_select[Select] the Organization with the deployment.
+1. xref:cloud:ROOT:user-management/organization.adoc#_select[Select] the Organization with the deployment.
 2. Open the Deployments page from the navigation menu on the left.
 3. Select the deployment to see the details from the list and click on it.
 
@@ -56,7 +56,7 @@ Suspended deployment will not consume computation resources but will use storage
 
 To suspend a running deployment use the following steps:
 
-1. xref:cloud::user-management/organization.adoc#_select[Select] the Organization with the deployment.
+1. xref:cloud:ROOT:user-management/organization.adoc#_select[Select] the Organization with the deployment.
 2. Open the Deployments page from the navigation menu on the left.
 3. Select the deployment or deployments to suspend by ticking the checkbox in the respective lines on the left.
 4. Click btn:[Suspend] button at the top toolbar.
@@ -65,7 +65,7 @@ To suspend a running deployment use the following steps:
 [caption=""]
 .Alternatively
 ====
-1. xref:cloud::user-management/organization.adoc#_select[Select] the Organization with the deployment.
+1. xref:cloud:ROOT:user-management/organization.adoc#_select[Select] the Organization with the deployment.
 2. Open the Deployments page from the navigation menu on the left.
 3. Select the deployment to suspend by clicking on it.
 4. Click the btn:[Suspend] button at the top right toolbar.
@@ -76,7 +76,7 @@ To suspend a running deployment use the following steps:
 
 To resume a suspended deployment:
 
-1. xref:cloud::user-management/organization.adoc#_select[Select] the Organization with the deployment.
+1. xref:cloud:ROOT:user-management/organization.adoc#_select[Select] the Organization with the deployment.
 2. Open the Deployments page from the navigation menu on the left.
 3. Select the deployment or deployments to resume by ticking the checkbox in the respective lines on the left.
 4. Click the btn:[Resume] button at the top toolbar.
@@ -85,7 +85,7 @@ To resume a suspended deployment:
 [caption=""]
 .Alternatively
 ====
-1. xref:cloud::user-management/organization.adoc#_select[Select] the Organization with the deployment.
+1. xref:cloud:ROOT:user-management/organization.adoc#_select[Select] the Organization with the deployment.
 2. Open the Deployments page from the navigation menu on the left.
 3. Select the deployment to resume by clicking on it.
 4. Click the btn:[Resume] button at the top right toolbar.
@@ -103,7 +103,7 @@ This action is irreversible and all information stored in the deployment will be
 
 To destroy a deployment use the following steps:
 
-1. xref:cloud::user-management/organization.adoc#_select[Select] the Organization with the deployment.
+1. xref:cloud:ROOT:user-management/organization.adoc#_select[Select] the Organization with the deployment.
 2. Open the Deployments page from the navigation menu on the left.
 3. Select the deployment or deployments to destroy by ticking the checkbox in the respective lines on the left.
 4. Click btn:[Destroy] button at the top toolbar.
@@ -112,7 +112,7 @@ To destroy a deployment use the following steps:
 [caption=""]
 .Alternatively
 ====
-1. xref:cloud::user-management/organization.adoc#_select[Select] the Organization with the deployment.
+1. xref:cloud:ROOT:user-management/organization.adoc#_select[Select] the Organization with the deployment.
 2. Open the Deployments page from the navigation menu on the left.
 3. Select the deployment to destroy by clicking on it.
 4. Click the btn:[Destroy] button at the bottom of the page.
