--- a/typedb-src/modules/ROOT/pages/managing-typedb/version-update.adoc
+++ b/typedb-src/modules/ROOT/pages/managing-typedb/version-update.adoc
@@ -1,4 +1,4 @@
-= Upgrading
+= Version update
 :keywords: typedb, upgrade, version, update, migration, compatibility
 :longTailKeywords: updating TypeDB, upgrading TypeDB, migrating TypeDB
 :pageTitle: Upgrading
@@ -21,12 +21,21 @@ server installations.
 
 To do this, simply shut down the servers of the old version, and copy the database to migrate from the data
 directory (set by the `storage.data` parameter in the
+<<<<<<<< HEAD:typedb-src/modules/ROOT/pages/self-hosted-deployments/update.adoc
 xref:self-hosted-deployments/configuration.adoc#_the_default_location_of_the_config_file[config]) into the data directory of the new
 TypeDB server installation.
 
 Alternatively, just update the new server's
 xref:self-hosted-deployments/configuration.adoc#_the_default_location_of_the_config_file[configuration file] to use the same
 *data directory* path as the old one. That is why we xref:self-hosted-deployments/configuration.adoc#_storage_configuration[recommend]
+========
+xref:managing-typedb/configuration.adoc#_the_default_location_of_the_config_file[config]) into the data directory of the new
+TypeDB server installation.
+
+Alternatively, just update the new server's
+xref:managing-typedb/configuration.adoc#_the_default_location_of_the_config_file[configuration file] to use the same
+*data directory* path as the old one. That is why we xref:managing-typedb/configuration.adoc#_storage_configuration[recommend]
+>>>>>>>> typedb-omni-docs:typedb-src/modules/ROOT/pages/managing-typedb/version-update.adoc
 storing data separately from TypeDB server files.
 
 [#_compatibility]
@@ -55,4 +64,8 @@ To migrate data between different database encoding versions use the <<_export_a
 == Export and import
 
 We can use the export/import functionality to migrate our data while switching to a newer version of TypeDB server.
+<<<<<<<< HEAD:typedb-src/modules/ROOT/pages/self-hosted-deployments/update.adoc
 Please see the xref:self-hosted-deployments/export-import.adoc[Export/import] page for information on how to do that.
+========
+Please see the xref:managing-typedb/export-import.adoc[Export/import] page for information on how to do that.
+>>>>>>>> typedb-omni-docs:typedb-src/modules/ROOT/pages/managing-typedb/version-update.adoc
