--- a/typedb-src/modules/ROOT/pages/tutorials/iam-schema.adoc
+++ b/typedb-src/modules/ROOT/pages/tutorials/iam-schema.adoc
@@ -17,7 +17,7 @@ under a single management framework.
 
 [NOTE]
 ====
-The terminology used in the IAM xref:quickstart/studio.adoc#_iam_schema[schema] is defined
+The terminology used in the IAM xref:quickstart-guide.adoc#_iam_schema[schema] is defined
 according to the sources mentioned above and the ISO/IEC 15408-1 standard within the context of an information system.
 ====
 
@@ -29,7 +29,7 @@ TypeDB documentation.
 * xref:attachment$iam-schema.tql[iam-schema.tql,window=_blank]
 * xref:attachment$iam-data.tql[iam-data.tql,window=_blank]
 
-Check our xref:quickstart/studio.adoc[Quickstart guide] for step-by-step instructions how to load the schema and data to a
+Check our xref:quickstart-guide.adoc[Quickstart guide] for step-by-step instructions how to load the schema and data to a
 TypeDB database.
 ====
 
@@ -45,7 +45,7 @@ As with any TypeDB schema, the IAM schema consists of:
 
 [NOTE]
 ====
-The xref:development/schema.adoc[schema] page provides more information to better understand the terminology of
+The xref:development/define-schema.adoc[schema] page provides more information to better understand the terminology of
 TypeDB schemas.
 ====
 
@@ -277,7 +277,7 @@ image::iam-full-schema.png[Full schema visualization, width = 80%, link=self, al
 
 == Sample dataset
 
-The sample dataset that we loaded in the xref:quickstart/studio.adoc#_iam_microdataset[Quickstart guide]
+The sample dataset that we loaded in the xref:quickstart-guide.adoc#_iam_microdataset[Quickstart guide]
 consists of the following:
 
 * Subjects:
